--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -784,7 +784,15 @@ margin-left: 100px; */
   <div class="card">
     <div class="card_image"><img class="image_card" src="https://media.istockphoto.com/vectors/vector-illustration-in-flat-simple-style-online-psychological-help-vector-id1256551538?k=20&m=1256551538&s=612x612&w=0&h=TUertl_YRw9L55yi0XQtmD2Z1hkYCVzAQUML9uFIL9M="></div>
     <div class="card_content">
-      <h2 class="card_title">Upload Datas</h2>
+      <h2 class="card_title">Notifications</h2>
+    </div> 
+  </div>
+</a>
+  <a href=#> 
+  <div class="card">
+    <div class="card_image"><img class="image_card" src="https://media.istockphoto.com/vectors/vector-illustration-in-flat-simple-style-online-psychological-help-vector-id1256551538?k=20&m=1256551538&s=612x612&w=0&h=TUertl_YRw9L55yi0XQtmD2Z1hkYCVzAQUML9uFIL9M="></div>
+    <div class="card_content">
+      <h2 class="card_title">Set Schedule</h2>
     </div> 
   </div>
 </a>
@@ -793,7 +801,7 @@ margin-left: 100px; */
   <div class="card">
     <div class="card_image"><img class="image_card" src="https://media.istockphoto.com/vectors/vector-illustration-in-flat-simple-style-online-psychological-help-vector-id1252391886?k=20&m=1252391886&s=612x612&w=0&h=gV16EIdD24s8mRlKIkecAkLcvSwZjSAV1DjC_jIPPws="></div>
     <div class="card_content">
-      <h2 class="card_title">Update Datas</h2>
+      <h2 class="card_title">View Schedule</h2>
     </div> 
   </div>
 </a>
@@ -802,11 +810,13 @@ margin-left: 100px; */
   <div class="card">
     <div class="card_image"><img class="image_card" src="https://media.istockphoto.com/vectors/online-medical-consultation-support-online-doctor-healthcare-services-vector-id1263867863?k=20&m=1263867863&s=612x612&w=0&h=xSD05hGU3VBlxxEu0XttSWv96Y-eoswe-G_Zk95jGoM="></div>
     <div class="card_content">
-      <h2 class="card_title">View Offerings</h2>
+      <h2 class="card_title">View History</h2>
     </div> 
   </div>
 </a>
 </div>
+<br>
+
 
 <br>
 
