--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -8,7 +8,8 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 600px;
-  height: 300px;
+  min-height: 530px;
+  /* height: 300px; */
   border-radius: 5px;
   background-color: #98b4ac;
   float: center;
@@ -96,12 +97,15 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
   }
-#id_program_designation{
-  width: 95px;
-}
 
 .bText{
   color: #fff;
+}
+#id_program_designation{
+  width: 230px;
+  text-align: left;
+  font-size: 16px;
+  margin: auto;
 }
 </style>
 
@@ -109,7 +113,6 @@ outline: none;
   <button type="submit" class="buttonF">Assign Employee</button>
 </div> 
 
-  <div class="input">
 <br>
 {% for message in messages %}    
 <center><p><b>{{message}} !</b></p></center>
