--- a/templates/counselor/view_another_feedback.html
+++ b/templates/counselor/view_another_feedback.html
@@ -219,7 +219,7 @@ text-align: center;
   <table class="fl-table">
       <thead>
       <tr>
-          <th class="table_head">Date</th>
+          <th class="table_head">Date of Session</th>
           <th class="table_head">ID Number</th>
           <th class="table_head">Students Name</th>
           <th class="table_head">Degree Program</th>
