--- a/templates/teacher/list_referred_students.html
+++ b/templates/teacher/list_referred_students.html
@@ -236,7 +236,7 @@ min-width: 180px;
 
     </table>
     {% if not object_list %}
-  <center><p style="padding: 10px;"><b>No Referred Students Yet!</b></p></center>
+  <center><p style="padding: 10px;"><b>No Students Yet!</b></p></center>
   {% endif %}
   </div>
 
